# Tlazohcamati

./: README.md
SUSY/: Assem1.SLDASM  BASE.SLDASM  REFERENCIA.SLDPRT  bandeja.SLDPRT  base_alta.SLDPRT  base_brazo.SLDPRT  base_simple.SLDPRT  caster_front.SLDPRT  cuerpo1.SLDPRT  empujar.SLDPRT  garra.SLDPRT  linea.SLDPRT  pata.SLDPRT  pata2.SLDPRT  pata3.SLDPRT  rueda.SLDPRT  urdf.urdf  ~$garra.SLDPRT
SUSY/BASEs.SLDASM/: CMakeLists.txt  package.xml
SUSY/BASEs.SLDASM/config/: joint_names_BASEs.SLDASM.yaml
SUSY/BASEs.SLDASM/launch/: display.launch  gazebo.launch
SUSY/BASEs.SLDASM/urdf/: BASEs.SLDASM.csv  BASEs.SLDASM.urdf
SUSY/mechanics/: base_alta.STL  base_brazo.STL  base_simple.STL  garra.STL  rueda.STL
susy_ws/src/: gui.config
susy_ws/src/susy_controller/: CMakeLists.txt  package.xml
susy_ws/src/susy_controller/config/: susy_controllers.yaml
susy_ws/src/susy_controller/launch/: controller.launch.py  controller2.launch.py
susy_ws/src/susy_description/: CMakeLists.txt  package.xml
susy_ws/src/susy_description/3Dmodels/: base_alta.STL  base_simple.STL  caster_front.STL  empujar.STL
susy_ws/src/susy_description/launch/: display.launch.py  gazebo.launch.py
susy_ws/src/susy_description/models/ground_plane/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
susy_ws/src/susy_description/rviz/: rviz.rviz
susy_ws/src/susy_description/urdf/: susy.urdf.xacro  susy2.urdf.xacro  susy3.urdf.xacro  susy_gazebo.xacro  susy_gazebo_lidar.xacro  susy_ros2_control.xacro
susy_ws/src/susy_localization/: CMakeLists.txt  package.xml
(+5 files in other folders)
